# Flask-RatingsAPI

./: README.md  app.py  pyproject.toml
app/: __init__.py
app/DAL/: review_Dal.py  role_Dal.py  user_Dal.py
app/config/: config.py  connector.py
app/controllers/: auth_controller.py  review_controller.py  role_controller.py  user_controller.py
app/models/: reviewModel.py  userRoleModel.py
app/routes/: api.py
app/seeds/: seeds.py
app/utils/: jwtdecorator.py
migrations/versions/: 9e1695997c4a_initial_migration_create_users_and_.py  b39a2ab043d1_initial_migration_create_reviews.py
